--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   padding: 0 2rem;
   max-width: 720px;
   margin: 0 auto;
@@ -37,10 +38,17 @@
   text-decoration: none;
 }
 
-.title {
+.maintitle {
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  text-align: center;
+}
+
+.title {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 2rem;
   text-align: center;
 }
 
@@ -57,6 +65,10 @@
   transition: all ease 75ms;
 }
 
+.greenbutton {
+  background-color: rgb(79, 170, 79);
+}
+
 .button:is(:hover, :focus):not(:disabled, :active) {
   transform: scale(1.05);
 }
@@ -64,4 +76,14 @@
 .button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
+}
+
+.userImage {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 10px;
+  border: 2px solid #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
