--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 * {
-  color: inherit;
+  color: whitesmoke;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -8,8 +8,10 @@
 html,
 body {
   font-family: system-ui, sans-serif;
+  background: linear-gradient(to bottom, #888888, #000000);
 }
 
 :any-link:not(:hover, :focus, :active) {
   text-decoration: none;
 }
+
